# mne-bids-pipeline

./: .git-blame-ignore-revs  .gitignore  .lefthook.yml  .mailmap  .pre-commit-config.yaml  00-anonymize_convert_BIDS.py  00-create_correg_and_BEM_XXX_error.py  00-fetch_data.py  01-anatomy.py  01-frequency_filtering.py  01-import_and_filter.py  01-import_and_maxfilter.py  02-apply_maxwell_filter.py  02-frequency_filter.py  02-maxwell_filtering.py  03-extract_events.py  03-make_epochs.py  04-artifact_correction_ica.py  04-artifact_correction_ssp.py  04-make_epochs.py  04a-run_ica.py  04b-compute_and_apply_ssp.py  04b-run_ssp.py  05-make_epochs.py  05a-apply_ica.py  05a-run_ica.py  05b-apply_ssp.py  05b-compute_and_apply_ssp.py  05b-run_ssp.py  06-make_epochs.py  06-make_evoked.py  06a-apply_ica.py  06b-apply_ssp.py  07-group_average_sensors.py  07-make_evoked.py  07-sliding_estimator.py  08-group_average_sensors.py  08-sliding_estimator.py  08-time_frequency.py  09-group_average_sensors.py  (+37 more)
.circleci/: check_installation.sh  config.yml  install_deps.sh  remove_examples.sh  run_dataset_and_copy_files.sh  setup_bash.sh
.github/: dependabot.yml  pull_request_template.md  release.yaml
.github/workflows/: autofix.yml  automerge.yml  autopush.yml  circleci-redirector.yml  release.yml  run-tests.yml  tests.yml  uv_update.yml
1.10/: 404.html  changes.html  dev.md.inc.template  governance.html  index.html  objects.inv  tags.html
1.10/examples/: ERP_CORE.html  MNE-funloc-data.html  MNE-phantom-KIT-data.html  ds000117.html  ds000246.html  ds000247.html  ds000248_FLASH_BEM.html  ds000248_T1_BEM.html  ds000248_base.html  ds000248_ica.html  ds000248_no_mri.html  ds001810.html  ds001971.html  ds003104.html  ds003392.html  ds003775.html  ds004107.html  ds004229.html  eeg_matchingpennies.html  examples.html
1.10/features/: overview.html  steps.html
1.10/getting_started/: basic_usage.html  freesurfer.html  install.html
1.10/search/: search_index.json
1.10/settings/: caching.html  error_handling.html  general.html  logging.html  parallelization.html
1.5/: 404.html  changes.html  governance.html  index.html  objects.inv  tags.html
1.5/examples/: ERP_CORE.html  ds000117.html  ds000246.html  ds000247.html  ds000248_FLASH_BEM.html  ds000248_T1_BEM.html  ds000248_base.html  ds000248_ica.html  ds000248_no_mri.html  ds001810.html  ds001971.html  ds003104.html  ds003392.html  ds003775.html  ds004107.html  ds004229.html  eeg_matchingpennies.html  examples.html
1.5/features/: overview.html  steps.html
1.5/getting_started/: basic_usage.html  freesurfer.html  install.html
1.5/search/: search_index.json
1.5/settings/: general.html
1.6/: 404.html  changes.html  governance.html  index.html  tags.html
1.6/examples/: ERP_CORE.html  MNE-phantom-KIT-data.html  ds000117.html  ds000246.html  ds000247.html  ds000248_FLASH_BEM.html  ds000248_T1_BEM.html  ds000248_base.html  ds000248_ica.html  ds000248_no_mri.html  ds001810.html  ds001971.html  ds003104.html  ds003392.html  ds003775.html  ds004107.html  ds004229.html  eeg_matchingpennies.html  examples.html
1.6/features/: overview.html  steps.html
1.6/getting_started/: basic_usage.html  freesurfer.html  install.html
1.6/search/: search_index.json
1.6/settings/: execution.html  general.html
1.7/: 404.html  changes.html  governance.html  index.html  objects.inv  tags.html
1.7/examples/: ERP_CORE.html  MNE-phantom-KIT-data.html  ds000117.html  ds000246.html  ds000247.html  ds000248_FLASH_BEM.html  ds000248_T1_BEM.html  ds000248_base.html  ds000248_ica.html  ds000248_no_mri.html  ds001810.html  ds001971.html  ds003104.html  ds003392.html  ds003775.html  ds004107.html  ds004229.html  eeg_matchingpennies.html  examples.html
1.7/features/: overview.html  steps.html
1.7/getting_started/: basic_usage.html  freesurfer.html  install.html
1.7/search/: search_index.json
1.7/settings/: execution.html  general.html
1.8/: 404.html  changes.html  governance.html  index.html  objects.inv  tags.html
1.8/examples/: ERP_CORE.html  MNE-phantom-KIT-data.html  ds000117.html  ds000246.html  ds000247.html  ds000248_FLASH_BEM.html  ds000248_T1_BEM.html  ds000248_base.html  ds000248_ica.html  ds000248_no_mri.html  ds001810.html  ds001971.html  ds003104.html  ds003392.html  ds003775.html  ds004107.html  ds004229.html  eeg_matchingpennies.html  examples.html
1.8/features/: overview.html  steps.html
1.8/getting_started/: basic_usage.html  freesurfer.html  install.html
1.8/search/: search_index.json
1.8/settings/: execution.html  general.html
1.9/: 404.html  changes.html  governance.html  index.html  objects.inv  tags.html
1.9/css/: extra.css
1.9/examples/: ERP_CORE.html  MNE-phantom-KIT-data.html  ds000117.html  ds000246.html  ds000247.html  ds000248_FLASH_BEM.html  ds000248_T1_BEM.html  ds000248_base.html  ds000248_ica.html  ds000248_no_mri.html  ds001810.html  ds001971.html  ds003104.html  ds003392.html  ds003775.html  ds004107.html  ds004229.html  (+2 more)
dev/: 404.html  changes.html  dev.html  dev.md.inc.template  governance.html  index.html  objects.inv  tags.html  v1.0.html  v1.1.html  v1.10.html  v1.2.html  v1.3.html  v1.4.html  v1.5.html  v1.6.html  v1.7.html  v1.8.html  v1.9.html
docker/: Dockerfile  README.md
docs/: .build-docs.sh.swp  build-docs.sh  getting_started.md  hooks.py  install.md  main.py  mkdocs.yml  settings.md
mne_bids_pipeline/: __init__.py  _config.py  _config_import.py  _config_template.py  _config_utils.py  _decoding.py  _docs.py  _download.py  _import_data.py  _io.py  _logging.py  _main.py  _parallel.py  _reference.py  _reject.py  _report.py  _run.py  _typing.py  _utils.py  _viz.py  config.py  run.py  typing.py
scripts/: 01-import_and_maxfilter.py  04a-run_ica.py  09-group_average_sensors.py  10-make_forward.py  12-make_inverse.py  13-group_average_source.py  99-make_reports.py
tests/: datasets.py  download_test_data.py  ds000247_scans.tsv  ds001971_participants.tsv  environment.yml  requirements.txt  run_pipeline_tests.py  run_tests.py  test_documented.py  test_pathtools.py  tests_requirements.txt
(+721 files in other folders)
