[project]
name = "mne-bids-pipeline"
# Keep in sync with README.md:
description = "A full-flegded processing pipeline for your MEG and EEG data"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["science", "neuroscience", "psychology"]
authors = [
  {name = "Eric Larson"},
  {name = "Alexandre Gramfort"},
  {name = "Mainak Jas"},
  {name = "Richard Höchenberger", email = "richard.hoechenberger@gmail.com"},
]
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python"
]
dependencies = [
    "typing_extensions; python_version < '3.8'",
    "importlib_metadata; python_version < '3.8'",
    "psutil",  # for joblib
    "packaging",
    "joblib >= 0.14",
    "threadpoolctl",
    "dask[distributed]",
    "bokeh < 3",  # for distributed dashboard
    "jupyter-server-proxy",  # to have dask and jupyter working together
    "scikit-learn",
    "pandas",
    "seaborn",
    "json_tricks",
    "rich",
    "python-picard",
    "qtpy",
    "pyvista",
    "pyvistaqt",
    "openpyxl",
    "autoreject",
    "mne[hdf5] >=1.2",
    "mne-bids[full]",
    "filelock",
    "setuptools >=65",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
    "psutil",
    "datalad",
    "ruff",
    "mkdocs",
    "mkdocs-material >= 9.0.4",
    "mkdocs-material-extensions",
    "mkdocs-macros-plugin",
    "mkdocs-include-markdown-plugin",
    "mkdocstrings-python",
    "mike",
    "jinja2",
    "black",  # function signature formatting
    "livereload",
    "openneuro-py >= 2022.2.0",
    "httpx >= 0.20",
    "tqdm",
    "Pygments",
    "pyyaml",
]

[project.scripts]
mne_bids_pipeline = "mne_bids_pipeline._main:main"

[project.urls]
homepage = "https://mne.tools/mne-bids-pipeline"
repository = "https://github.com/mne-tools/mne-bids-pipeline"
changelog = "http://mne.tools/mne-bids-pipeline/changes.html"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
tag_regex = "^(?P<prefix>v)?(?P<version>[0-9.]+)(?P<suffix>.*)?$"
version_scheme = "release-branch-semver"

[tool.setuptools.packages.find]
exclude = ["false"]  # on CircleCI this folder appears during pip install -ve. for an unknown reason

[tool.setuptools.package-data]
"mne_bids_pipeline.steps.freesurfer.contrib" = ["version"]

[tool.codespell]
skip = "docs/site/*,*.html,steps/freesurfer/contrib/*"
ignore-words = "ignore_words.txt"
builtin = "clear,rare,informal,names,usage"
quiet-level = 3
interactive = 3
enable-colors = ""
count = ""

[tool.pytest.ini_options]
addopts = "-ra -vv --tb=short --cov=mne_bids_pipeline --cov-report= --junit-xml=junit-results.xml --durations=10"
testpaths = [
    "mne_bids_pipeline",
]
junit_family = "xunit2"

[tool.ruff]
exclude = ["**/freesurfer/contrib", "dist/" , "build/"]

[tool.black]
exclude = "(.*/freesurfer/contrib/.*)|(dist/)|(build/)"
