[project]
name = "mne-bids-pipeline"
# Keep in sync with README.md:
description = "A full-flegded processing pipeline for your MEG and EEG data"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
authors = [
  { name = "Eric Larson" },
  { name = "Alexandre Gramfort" },
  { name = "Mainak Jas" },
  { name = "Richard Höchenberger", email = "richard.hoechenberger@gmail.com" },
]
keywords = ["neuroscience", "psychology", "science"]
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
]
dependencies = [
  "annotated-types",  # for distributed dashboard
  "autoreject",  # to have dask and jupyter working together
  "bokeh",  # for joblib
  "dask[distributed]",  # from pandas
  "filelock",
  "joblib >= 0.14",
  "json_tricks",
  "jupyter-server-proxy",
  "matplotlib",
  "meegkit",
  "mne-bids[full]",
  "mne-icalabel",
  "mne[hdf5] >=1.7",
  "nibabel",
  "numpy",
  "openpyxl",
  "packaging",
  "pandas",
  "psutil",
  "pyarrow",
  "pydantic >= 2.0.0",
  "python-picard",
  "pyvista",
  "pyvistaqt",
  "qtpy",
  "rich",
  "scikit-learn",
  "scipy",
  "seaborn",
  "threadpoolctl"
]
dynamic = ["version"]

[project.urls]
changelog = "http://mne.tools/mne-bids-pipeline/changes.html"
homepage = "https://mne.tools/mne-bids-pipeline"
repository = "https://github.com/mne-tools/mne-bids-pipeline"

[project.scripts]
mne_bids_pipeline = "mne_bids_pipeline._main:main"

[dependency-groups]
dev = [
  "Pygments",
  "codespell",
  "httpx >= 0.20",
  "jinja2",
  "lefthook",
  "openneuro-py >= 2022.2.0",
  "pooch",
  "psutil",
  "pytest-cov",
  "pytest >= 9.0",
  "pyyaml",
  "ruff",
  "tombi",
  "tqdm",
  "ty>=0.0.12",
]
docs = [
  "black",  # docstring reformatting
  "livereload",
  "mike",
  "mkdocs",
  "mkdocs-exclude",
  "mkdocs-include-markdown-plugin",
  "mkdocs-macros-plugin",
  "mkdocs-material-extensions",
  "mkdocs-material >= 9.0.4",
  "mkdocstrings-python",
]

[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.codespell]
skip = "docs/site/*,*.html,steps/freesurfer/contrib/*"
ignore-words = "ignore_words.txt"
builtin = "clear,rare,informal,names,usage"
quiet-level = 3
interactive = 3
enable-colors = ""
count = ""

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "release-branch-semver" }

[tool.hatch.build]
exclude = [
  "/.*",
  "/codecov.yml",
  "**/tests",
  "/docs",
  "/docs/source/examples/gen_examples.py",  # specify explicitly because its exclusion is negated in .gitignore
  "/Makefile",
  "/CONTRIBUTING.md",
  "ignore_words.txt",
]

[tool.pytest]
addopts = [
  "--cov-report=",
  "--cov=mne_bids_pipeline",
  "--durations=10",
  "--junit-xml=junit-results.xml",
  "--tb=short",
  "-ra",
  "-vv"
]
junit_family = "xunit2"
testpaths = ["mne_bids_pipeline"]

[tool.ruff]
exclude = ["**/freesurfer/contrib", "dist/", "build/", "**/.*cache"]

[tool.ruff.lint]
select = ["A", "B006", "D", "E", "F", "I", "W", "UP", "TID252"]
ignore = [
  "D104",  # Missing docstring in public package
]

[tool.ruff.lint.per-file-ignores]
"mne_bids_pipeline/typing.py" = ["A005"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
